// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Client Manager (Camunda BPM) Get Workflows by limiting the result 1`] = `
{
  "items": [
    {
      "bpmnProcessId": "BPMN_P_DEMO",
      "resourceName": "BPMN_P_DEMO.bpmn",
      "version": 1,
      "workflowKey": "BPMN_P_DEMO:1:eb55f07f-7769-11e9-84ff-0242ac110002",
    },
    {
      "bpmnProcessId": "invoice",
      "resourceName": "invoice.v1.bpmn",
      "version": 1,
      "workflowKey": "invoice:1:64beaa08-9ad1-11e9-8102-0242ac110002",
    },
  ],
  "paging": {
    "from": 0,
    "size": 2,
    "totalCount": 3,
  },
}
`;

exports[`Client Manager (Camunda BPM) Get Workflows by limiting the result and searching a specific workflow 1`] = `
{
  "items": [
    {
      "bpmnProcessId": "message-event",
      "resourceName": "MESSAGE_EVENT.bpmn",
      "version": 1,
      "workflowKey": "message-event:1:ea268055-9b3e-11e9-ba13-0242ac110002",
    },
  ],
  "paging": {
    "from": 0,
    "size": 2,
    "totalCount": 1,
  },
}
`;

exports[`Client Manager (Camunda BPM) Get Workflows by limiting the result and skipping 2 workflows 1`] = `
{
  "items": [
    {
      "bpmnProcessId": "message-event",
      "resourceName": "MESSAGE_EVENT.bpmn",
      "version": 1,
      "workflowKey": "message-event:1:ea268055-9b3e-11e9-ba13-0242ac110002",
    },
  ],
  "paging": {
    "from": 3,
    "size": 2,
    "totalCount": 4,
  },
}
`;
